--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.8",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
