--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.6.8",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.12.4",
