--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.0",
+    "react-stripe-checkout": "^2.6.3",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5"
   },
