--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5"
   },
